# molecule-builder

./: .gitignore  FeCl3_H2O3.POSCAR  README.md  compute_energetics.py  find_best_products.py  generate_ni_complexes.py  pyproject.toml  setup.py  test_molbuilder.py
examples/: README.md  batch_enumerate.py  build_single.py  cisplatin.py  dimer_paddlewheel.py  heteroleptic_dimer.py  isomers.py  reaction_network.py  trimer_triangular.py  xtb_delta_g.py  xtb_relax_and_energy.py
molbuilder/: EXTENDED_FEATURES.md  __init__.py  api.py  api_extended.py  cli.py  cli_extended.py  cli_utils.py  combinatorics.py  energetics.py  exceptions.py  graph.py  reactions.py  relaxation.py
molbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
molbuilder/core/: bond_lengths.py  geometry.py  isomers.py  molecule.py  stereochemistry.py  validation.py
molbuilder/ligands/: __init__.py  custom_poscar.py  denticity_modes.py  library.py  library_extended.py  ligand_geometry.py  models.py
molbuilder/output/: __init__.py  excel_writer.py  poscar_writer.py  writer.py  xyz_writer.py
tests/: conftest.py  test_combinatorics.py  test_energetics.py  test_exceptions.py  test_geometry.py  test_graph.py  test_ligands.py  test_reactions.py  test_regression.py  test_relaxation.py  test_serialization.py  test_validation.py
tutorials/: 01_first_complex.py  01_first_complex_and_relaxation.py  02_isomers_and_batch.py  02_isomers_and_bidentate.py  03_dimers_and_trimers.py  04_mace_cluster_batch.py  04_mace_relaxation.py  05_thermochemistry.py  05_thermochemistry_substitution.py  06_enumeration_and_energetics.py  07_reaction_network.py  README.md
