[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbuilder"
version = "0.1.0"
description = "Transition metal complex builder -- generates VASP POSCAR structures"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "rdkit>=2022.3",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
xtb = [
    "tblite>=0.3",
    "ase>=3.22",
]
mace = [
    "mace-torch>=0.3.4",
    "ase>=3.22",
]
relax = [
    "tblite>=0.3",
    "mace-torch>=0.3.4",
    "ase>=3.22",
]

[project.scripts]
molbuilder = "molbuilder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molbuilder*"]
